:memo: fixing arraylist remove method error
Co-authored-by: dartmol203 <andre.correa.silva203@gmail.com>